Chore: adding activity type module
