# src/modules/activity-type/providers/activity-type.provider.ts
@@ -1,0 +1,12 @@
+import { DataSource } from 'typeorm';
+
+import { ActivityType } from '../entities/activity-type.entity';
+
+export const activityTypeProvider = [
+  {
+    provide: 'ACTIVITY_TYPE_REPOSITORY',
+    useFactory: (dataSource: DataSource) =>
+      dataSource.getRepository(ActivityType),
+    inject: ['DATA_SOURCE'],
+  },
+];
